# oop_hw

./: README.md  pyproject.toml
src/: base_product.py  category.py  lawn_grass.py  main.py  print_mixin.py  product.py  smartphone.py
tests/: conftest.py  test_category.py  test_lawn_grass.py  test_main.py  test_print_mixin.py  test_product.py  test_smartphone.py
